modal media q styled need to fix close-btn alignment

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,6 +10,10 @@
   align-items: center;
   justify-content: center;
   visibility: hidden;
+  padding: 0 16px;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  line-height: 1;
 }
 
 .modal_opened {
@@ -42,6 +46,7 @@
 
 .modal__title {
   margin: 0 0 32px;
+  font-size: 32px;
 }
 
 .modal__label {
@@ -50,11 +55,15 @@
   gap: 8px;
   margin-bottom: 32px;
   color: rgba(0, 0, 0, 0.7);
+  font-size: 16px;
+  line-height: 17.6px;
 }
 
 .modal__input {
-  padding: 16x 12px;
+  padding: 16px 12px;
   height: 52px;
+  font-size: 20px;
+  line-height: 1;
 }
 
 .modal__submit-btn {
@@ -63,6 +72,7 @@
   background-color: rgba(0, 0, 0);
   border-radius: 8px;
   color: rgba(255, 255, 255, 1);
+  font-size: 16px;
 }
 
 .modal__submit-btn:hover {
@@ -76,4 +86,39 @@
 
 .modal__close-btn__icon:hover {
   background-image: url(../images/Property\ 1=Variant2.svg);
+}
+
+@media screen and (max-width: 774px) {
+  .modal {
+    padding: 0 20px;
+  }
+
+  .modal__container {
+    max-width: 300px;
+    padding: 22px 12px 12px;
+  }
+  .modal__title {
+    font-size: 20px;
+    margin: 12px 0 24px;
+  }
+  .modal__submit-btn {
+    height: 52px;
+    width: 100%;
+  }
+  .modal__label {
+    margin-bottom: 0px;
+    margin-top: 12px;
+  }
+  .modal__input {
+    height: 48px;
+    border-radius: 8px;
+    font-size: 16px;
+    margin-top: 8px;
+    margin-bottom: 12px;
+    padding: 0;
+  }
+  .modal__close-btn__icon {
+    position: relative;
+    right: 40px;
+  }
 }
